force-app/main/default/objects/Account/fields/Calidad__c.field-meta.xml
<CustomField>
    <fullName>Calidad__c</fullName>
    <label>Calidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESTANDAR</fullName>
            </value>
            <value>
                <fullName>PREFERENCIAL</fullName>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
            <value>
                <fullName>PROSPECTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>