force-app/main/default/objects/Account/fields/Carga_Aerea_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Carga_Aerea_Exportacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga Aérea Exportación</label>
    <type>Checkbox</type>
</CustomField>