force-app/main/default/objects/Account/fields/Carga_Aerea_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Carga_Aerea_Importacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga Aérea Importación</label>
    <type>Checkbox</type>
</CustomField>