force-app/main/default/objects/Account/fields/Carga_Mar_tima_Exportaci_n__c.field-meta.xml
<CustomField>
    <fullName>Carga_Mar_tima_Exportaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga Marítima Exportación</label>
    <type>Checkbox</type>
</CustomField>