force-app/main/default/objects/Account/fields/Casillero_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Casillero_Importacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casillero Importación</label>
    <type>Checkbox</type>
</CustomField>