force-app/main/default/objects/Account/fields/Cliente_con_Dicom__c.field-meta.xml
<CustomField>
    <fullName>Cliente_con_Dicom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente con Dicom</label>
    <type>Checkbox</type>
</CustomField>