force-app/main/default/objects/Account/fields/Condici_n_Carga_A_rea_Importaci_n__c.field-meta.xml
<CustomField>
    <fullName>Condici_n_Carga_A_rea_Importaci_n__c</fullName>
    <label>Condición Carga Aérea Importación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>15 días</fullName>
            </value>
            <value>
                <fullName>30 días</fullName>
            </value>
            <value>
                <fullName>45 días</fullName>
            </value>
            <value>
                <fullName>60 días</fullName>
            </value>
            <value>
                <fullName>90 días</fullName>
            </value>
            <value>
                <fullName>120 días</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>