force-app/main/default/objects/Account/fields/Courier_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Courier_Exportacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courier Exportación</label>
    <type>Checkbox</type>
</CustomField>