force-app/main/default/objects/Account/fields/Courier_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Courier_Importacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courier Importación</label>
    <type>Checkbox</type>
</CustomField>