force-app/main/default/objects/Account/fields/Debe__c.field-meta.xml
<CustomField>
    <fullName>Debe__c</fullName>
    <label>Debe</label>
    <summarizedField>Factura__c.Debe__c</summarizedField>
    <summaryForeignKey>Factura__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>