force-app/main/default/objects/Account/fields/Distribuci_n_Nacional__c.field-meta.xml
<CustomField>
    <fullName>Distribuci_n_Nacional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribución Nacional</label>
    <type>Checkbox</type>
</CustomField>