force-app/main/default/objects/Account/fields/Factor_Peso__c.field-meta.xml
<CustomField>
    <fullName>Factor_Peso__c</fullName>
    <label>Factor Peso</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>