force-app/main/default/objects/Account/fields/Fecha_solicitud_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_solicitud_de_Aprobacion__c</fullName>
    <label>Fecha solicitud de Aprobación</label>
    <type>Date</type>
</CustomField>