force-app/main/default/objects/Account/fields/Fecha_Solicitud_DICOM__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_DICOM__c</fullName>
    <label>Fecha Solicitud DICOM</label>
    <type>Date</type>
</CustomField>