force-app/main/default/objects/Account/fields/Forma_de_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Facturacion__c</fullName>
    <label>Forma de Facturación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fin de Mes</fullName>
            </value>
            <value>
                <fullName>Fin de Mes y Quincena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>