force-app/main/default/objects/Account/fields/Gesti_n_Comercial_Carga__c.field-meta.xml
<CustomField>
    <fullName>Gesti_n_Comercial_Carga__c</fullName>
    <label>Gestión Comercial Carga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Definido</fullName>
                <default>true</default>
                <label>No Definido</label>
            </value>
            <value>
                <fullName>HOT Express</fullName>
            </value>
            <value>
                <fullName>HOT Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>