force-app/main/default/objects/Account/fields/Giro__c.field-meta.xml
<CustomField>
    <fullName>Giro__c</fullName>
    <label>Giro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACABADO DE PRODUCTOS TEXTILES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES ARTISTICAS REALIZADAS POR BANDAS DE MUSICA COMPANIAS DE TEATRO CIRCENSES Y SIMILARES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES BANCARIAS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES COMBINADAS DE APOYO A INSTALACIONES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES COMBINADAS DE SERVICIOS ADMINISTRATIVOS DE OFICINA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS DE CALIFICACION CREDITICIA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS DE COBRO</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS DE EMPLEO</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS DE EMPLEO TEMPORAL INCLUYE EMPRESAS DE SERVICIOS TRANSITORIOS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS DE NOTICIAS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS DE VIAJES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENCIAS Y AGENTES DE REPRESENTACION DE ACTORES DEPORTISTAS Y OTRAS FIGURAS PUBLICAS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE AGENTES Y CORREDORES DE SEGUROS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO A LA AGRICULTURA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO A LA ENSENANZA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO A LA GANADERIA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO PARA LA EXPLOTACION DE OTRAS MINAS Y CANTERAS PRESTADOS POR EMPRESAS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO PARA LA EXPLOTACION DE OTRAS MINAS Y CANTERAS PRESTADOS POR PROFESIONALES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO PARA LA EXTRACCION DE PETROLEO Y GAS NATURAL PRESTADOS POR EMPRESAS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE APOYO PARA LA EXTRACCION DE PETROLEO Y GAS NATURAL PRESTADOS POR PROFESIONALES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ARTISTAS REALIZADAS DE FORMA INDEPENDIENTE: ACTORES MUSICOS ESCRITORES ENTRE OTROS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ASISTENCIA SOCIAL SIN ALOJAMIENTO PARA PERSONAS DE EDAD Y PERSONAS CON DISCAPACIDAD</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ASOCIACIONES EMPRESARIALES Y DE EMPLEADORES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ASOCIACIONES PROFESIONALES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ATENCION DE ENFERMERIA EN INSTITUCIONES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ATENCION EN INSTITUCIONES PARA PERSONAS CON DISCAPACIDAD MENTAL Y TOXICOMANOS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE ATENCION EN INSTITUCIONES PARA PERSONAS DE EDAD Y PERSONAS CON DISCAPACIDAD FISICA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE BIBLIOTECAS Y ARCHIVOS</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE CALLCENTER</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES DE CAMARAS DE COMPENSACION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>