force-app/main/default/objects/Account/fields/Haber__c.field-meta.xml
<CustomField>
    <fullName>Haber__c</fullName>
    <label>Haber</label>
    <summarizedField>Factura__c.Haber__c</summarizedField>
    <summaryForeignKey>Factura__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>