force-app/main/default/objects/Account/fields/Monto_DDP__c.field-meta.xml
<CustomField>
    <fullName>Monto_DDP__c</fullName>
    <label>Monto DDP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>