force-app/main/default/objects/Account/fields/Nombre_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Fantasia__c</fullName>
    <label>Nombre Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>