force-app/main/default/objects/Account/fields/Otra_Condici_n_Casillero_Importaci_n__c.field-meta.xml
<CustomField>
    <fullName>Otra_Condici_n_Casillero_Importaci_n__c</fullName>
    <label>Otra Condición Casillero Importación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>