force-app/main/default/objects/Account/fields/Otra_Condici_n_Distribuci_n_Nacional__c.field-meta.xml
<CustomField>
    <fullName>Otra_Condici_n_Distribuci_n_Nacional__c</fullName>
    <label>Otra Condición Distribución Nacional</label>
    <length>100</length>
    <type>Text</type>
</CustomField>