force-app/main/default/objects/Account/fields/Otra_Condicion_Carga_A_rea_Exportaci_n__c.field-meta.xml
<CustomField>
    <fullName>Otra_Condicion_Carga_A_rea_Exportaci_n__c</fullName>
    <label>Otra Condición Carga Aérea Exportación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>