force-app/main/default/objects/Account/fields/Otra_Condicion_Courier_Exportaci_n__c.field-meta.xml
<CustomField>
    <fullName>Otra_Condicion_Courier_Exportaci_n__c</fullName>
    <label>Otra Condición Courier Exportación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>