force-app/main/default/objects/Account/fields/Otro__c.field-meta.xml
<CustomField>
    <fullName>Otro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Otro</label>
    <type>Checkbox</type>
</CustomField>