force-app/main/default/objects/Account/fields/Requiere_HES__c.field-meta.xml
<CustomField>
    <fullName>Requiere_HES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere HES</label>
    <type>Checkbox</type>
</CustomField>