force-app/main/default/objects/Account/fields/Requiere_OC__c.field-meta.xml
<CustomField>
    <fullName>Requiere_OC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere OC</label>
    <type>Checkbox</type>
</CustomField>