force-app/main/default/objects/Account/fields/RUT__c.field-meta.xml
<CustomField>
    <fullName>RUT__c</fullName>
    <externalId>true</externalId>
    <label>RUT</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>