force-app/main/default/objects/Account/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <label>Saldo</label>
    <summarizedField>Factura__c.Saldo__c</summarizedField>
    <summaryForeignKey>Factura__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>