force-app/main/default/objects/Account/fields/Solicita_DICOM__c.field-meta.xml
<CustomField>
    <fullName>Solicita_DICOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicita DICOM</label>
    <type>Checkbox</type>
</CustomField>