force-app/main/default/objects/Account/fields/Tarifa_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Exportacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa Exportación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tarifa__c.Tipo_Tarifa__c</field>
            <operation>equals</operation>
            <value>Exportación</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tarifa__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>