force-app/main/default/objects/Account/fields/Tarifa_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Importacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa Importación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tarifa__c.Tipo_Tarifa__c</field>
            <operation>equals</operation>
            <value>Importación</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tarifa__c</referenceTo>
    <relationshipLabel>Cuentas (Tarifa Importación)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>