force-app/main/default/objects/Account/fields/Telefono_2__c.field-meta.xml
<CustomField>
    <fullName>Telefono_2__c</fullName>
    <label>Teléfono 2</label>
    <type>Phone</type>
</CustomField>