force-app/main/default/objects/Account/validationRules/Servicio_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Servicio_Checkbox</fullName>
    <active>false</active>
    <description>Valida que al marcar el servicio, deba seleccionar una condición comercial para ese servicio</description>
    <errorConditionFormula>AND(
    Courier_Importacion__c,
    ISBLANK(TEXT(Condici_n_Courier_Importaci_n__c))
)</errorConditionFormula>
    <errorMessage>Debe seleccionar una condición</errorMessage>
</ValidationRule>