force-app/main/default/objects/Account/validationRules/Validacion_Condicion_Comercial_Global.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Condicion_Comercial_Global</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Condicion_Comercial_Global__c),
  NOT(ISPICKVAL(Condicion_Comercial_Global__c, &quot;Contado&quot;)),
  NOT(
    OR(
      $Profile.Name = &quot;Administrador del sistema&quot;,
      $Profile.Name = &quot;Perfil Superusuario&quot;,
      $Profile.Name = &quot;Perfil Jefe Comercial&quot;,
      $Profile.Name = &quot;Gerencia&quot;
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Condicion_Comercial_Global__c</errorDisplayField>
    <errorMessage>Solo los usuarios con perfil Administrador, Superusuario, Jefe Comercial o Gerencia pueden cambiar la Condición Comercial a un valor diferente de “Contado”. Solicita el cambio a un administrador o superusuario.</errorMessage>
</ValidationRule>